--- a/src/app/modules/word-builder/word-builder.html
+++ b/src/app/modules/word-builder/word-builder.html
@@ -1,16 +1,25 @@
 @if (!this.refresh()) {
 <div class="word-builder">
-  <div class="word-builder__left-box">
-    <app-wiktion (sendUp)="sendUp()" /><app-search-ahead />
-  </div>
-  <div class="word-builder__right-box">
-    <app-top-form (speechChange)="speechChanged()" />
-    <app-display-box />
-    <app-case-component />
-    <div class="save-button-row">
-      <button (click)="saveWord()" matButton="filled">Save word</button>
-      <button (click)="this.refreshBuilder()" matButton="filled">Reset</button>
-    </div>
+  <app-top-form (speechChange)="speechChanged()" />
+
+  <app-display-box />
+  <app-case-component />
+  <div class="buz">
+    <button
+      class="word-builder__save-button-row"
+      (click)="saveWord()"
+      matButton="filled"
+    >
+      Save word
+    </button>
+    <button
+      class="word-builder__save-button-row"
+      (click)="this.refreshBuilder()"
+      matButton="filled"
+      color="secondary"
+    >
+      Reset
+    </button>
   </div>
 </div>
 
