--- a/src/app/shared/components/wiktion/wiktion.scss
+++ b/src/app/shared/components/wiktion/wiktion.scss
@@ -1,4 +1,9 @@
-// .wiktion-div {
+// .wiktion-container {
 //   display: flex;
 //   justify-content: end;
 // }
+.cloud {
+  //   transform: translateX(-7rem);
+  //   transform: translateY(0.5rem);
+  transform: translate(-3rem, 0.5rem);
+}
