--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,4 @@
-<!-- <app-sidenav /> -->
-<router-outlet></router-outlet>
+<app-sidenav />
+
+<!-- <router-outlet></router-outlet> -->
 <app-loading-indicator [detectRouteTransitions]="true" />
