--- a/src/app/shared/components/basic-quiz/basic-quiz.scss
+++ b/src/app/shared/components/basic-quiz/basic-quiz.scss
@@ -6,29 +6,37 @@
   width: 90vw;
   max-height: 25vh;
   text-align: right;
+  &__tenseStyle {
+    color: #a0a0a0;
+    font-size: x-small;
+  }
+  &__caseStyle {
+    color: white;
+    font-size: small;
+  }
 }
 .definitionBlock {
   overflow-y: auto;
-  // max-height: 24vh;
   margin-top: 1rem;
   font-style: italic;
 }
 .exampleBlock {
   overflow-y: auto;
   max-height: 23vh;
-  // margin-top: 1rem;
   color: #a0a0a0;
 }
 .titleBlock {
   padding: 1rem;
-  position: fixed;
-  left: 2.5vw;
+  position: absolute;
+  left: 1.5vw;
   bottom: 8vh;
   &__titleText:hover {
     cursor: pointer;
     color: greenyellow;
   }
 }
+
+//========
 .tenseStyle {
   color: #a0a0a0;
   font-size: x-small;
@@ -42,17 +50,17 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  .caseBlock {
-    overflow-y: auto;
-    width: 50vw;
-    max-height: 25vh;
-    text-align: right;
-  }
+  // .caseBlock {
+  //   overflow-y: auto;
+  //   width: 50vw;
+  //   max-height: 25vh;
+  //   text-align: right;
+  // }
 
-  .titleBlock {
-    padding: 1rem;
-    position: fixed;
-    left: 23.5vw;
-    bottom: 8vh;
-  }
+  // .titleBlock {
+  //   padding: 1rem;
+  //   position: fixed;
+  //   left: 23.5vw;
+  //   bottom: 8vh;
+  // }
 }
