--- a/src/app/shared/components/definition-edit/definition-edit.html
+++ b/src/app/shared/components/definition-edit/definition-edit.html
@@ -4,7 +4,7 @@
     @for (group of formArray.controls; track group.getRawValue(); let index =
     $index) {
     <div [formGroupName]="index">
-      <mat-form-field appearance="outline" class="field">
+      <mat-form-field appearance="outline" class="definition-container--field">
         <input
           matInput
           placeholder="..."
