--- a/src/app/shared/components/edit-imperfect/edit-imperfect.scss
+++ b/src/app/shared/components/edit-imperfect/edit-imperfect.scss
@@ -1,5 +1,8 @@
-@media only screen and (max-width: 600px) {
-  .big {
-    justify-content: end;
-  }
+// @media only screen and (max-width: 600px) {
+//   .imperfect-container {
+//     // justify-content: end;
+//   }
+// }
+.imperfect-container {
+  // justify-content: end;
 }
