--- a/src/app/shared/components/search-ahead/search-ahead.html
+++ b/src/app/shared/components/search-ahead/search-ahead.html
@@ -1,12 +1,19 @@
-<section class="wiktion-div">
+<!-- <section class="search-ahead">
   <form [formGroup]="aheadForm">
-    <mat-form-field appearance="outline">
+    <mat-form-field class="search-ahead__field" appearance="outline">
       <mat-label>Search</mat-label>
 
       <input type="text" formControlName="ahead" matInput />
     </mat-form-field>
   </form>
-</section>
-@if (this.vals$| async ) {} @for (word of this.output$ | async; track $index) {
-<p (click)="click(word.id)">{{ word.original }}</p>
-}
+</section> -->
+<div class="search-ahead__word-container">
+  @if (this.downPut()| async ) {} @for (word of this.output$ | async; track
+  $index) {
+  <p (click)="click(word.id)">{{ word.original }}</p>
+  }
+  <!-- @if (this.vals$| async ) {} @for (word of this.output$ | async; track $index)
+  {
+  <p (click)="click(word.id)">{{ word.original }}</p>
+  } -->
+</div>
