--- a/src/app/shared/components/sidenav/sidenav.scss
+++ b/src/app/shared/components/sidenav/sidenav.scss
@@ -1,20 +1,50 @@
-.example-container {
-  width: 100%;
-  height: 90%;
-  //   height: 300px;
-  //   border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.example-sidenav-content {
-  display: flex;
-  flex-direction: column;
+.drawer-holder {
   height: 100%;
-  width: 90%;
-  //   align-items: center;
-  //   justify-content: center;
+  // width: 100%;
+
+  .right-drawer {
+    // width: 100%;
+    height: 97vh;
+    &__toggle-button {
+      display: flex;
+      position: absolute;
+      top: 5rem;
+      left: 1rem;
+      border: solid black;
+      border-width: 0 3px 3px 0;
+      display: inline-block;
+      padding: 6px;
+      z-index: 7;
+      border-color: #a0a0a0;
+    }
+  }
+
+  .left-drawer {
+    // width: 100%;
+    height: 100%;
+
+    &__nav-row {
+      background-color: green;
+    }
+    &__toggle-button {
+      border: solid black;
+      border-width: 0 3px 3px 0;
+      display: inline-block;
+      padding: 6px;
+      border-color: #a0a0a0;
+    }
+  }
+}
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
 
-.example-sidenav {
-  // padding: 20px;
-  width: 20vw;
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+.mover {
+  // transform: translateX(18rem);
+  transform: translate(20rem, 4rem);
 }
