--- a/src/app/shared/components/basic-quiz/basic-quiz.scss
+++ b/src/app/shared/components/basic-quiz/basic-quiz.scss
@@ -28,13 +28,23 @@
 .titleBlock {
   padding: 1rem;
   position: absolute;
-  left: 1.5vw;
-  bottom: 8vh;
+  left: 2vw;
+  top: 30vh;
   &__titleText:hover {
     cursor: pointer;
     color: greenyellow;
   }
 }
+// .titleBlock {
+//   padding: 1rem;
+//   position: absolute;
+//   left: 1.5vw;
+//   bottom: 8vh;
+//   &__titleText:hover {
+//     cursor: pointer;
+//     color: greenyellow;
+//   }
+// }
 
 //========
 .tenseStyle {
