--- a/src/app/shared/components/basic-quiz/basic-quiz.scss
+++ b/src/app/shared/components/basic-quiz/basic-quiz.scss
@@ -35,6 +35,10 @@
     color: greenyellow;
   }
 }
+.blank {
+  min-height: 25vh;
+  color: black;
+}
 // .titleBlock {
 //   padding: 1rem;
 //   position: absolute;
