--- a/src/app/shared/components/basic-quiz/basic-quiz.html
+++ b/src/app/shared/components/basic-quiz/basic-quiz.html
@@ -70,7 +70,7 @@
     @for (example of this.word().examples; track $index) { @if (example) {
     <p>{{ example }}</p>
     } @else{
-    <div class="blank"></div>
+    <div class="blank">.</div>
     } }
   </div>
   }
