larger text title case

--- a/src/app/shared/components/basic-quiz/basic-quiz.scss
+++ b/src/app/shared/components/basic-quiz/basic-quiz.scss
@@ -27,7 +27,7 @@
 }
 .titleBlock {
   // padding: 1rem;
-  font-size: larger;
+  font-size: x-large;
   position: absolute;
   left: 21.5px;
   top: 30vh;
@@ -64,7 +64,7 @@
 @media only screen and (min-width: 600px) {
   .titleBlock {
     // padding: 1rem;
-    font-size: larger;
+    font-size: x-large;
     position: absolute;
     left: 40px;
     top: 30vh;
@@ -86,7 +86,7 @@
 
   .titleBlock {
     // padding: 1rem;
-    font-size: larger;
+    font-size: x-large;
     position: absolute;
     left: 50px;
     top: 30vh;
@@ -97,7 +97,7 @@
   }
   @media only screen and (min-width: 992px) {
     .titleBlock {
-      font-size: larger;
+      font-size: x-large;
       // padding: 1rem;
       position: absolute;
       left: 60px;
