--- a/src/app/modules/word-builder/word-builder.html
+++ b/src/app/modules/word-builder/word-builder.html
@@ -4,16 +4,16 @@
 
   <app-display-box />
   <app-case-component />
-  <div class="buz">
+  <div class="word-builder__save-button-row">
     <button
-      class="word-builder__save-button-row"
+      class="word-builder__save-button-row--button"
       (click)="saveWord()"
       matButton="filled"
     >
       Save word
     </button>
     <button
-      class="word-builder__save-button-row"
+      class="word-builder__save-button-row--button"
       (click)="this.refreshBuilder()"
       matButton="filled"
       color="secondary"
