--- a/src/app/shared/components/definition-edit/definition-edit.scss
+++ b/src/app/shared/components/definition-edit/definition-edit.scss
@@ -1,8 +1,6 @@
 .definition-container {
-  &--field {
+  &__field {
+    width: 85%;
+    margin-right: 0.3rem;
   }
 }
-
-// .field {
-//   width: 90%;
-// }
