--- a/src/app/shared/components/top-form/top-form.html
+++ b/src/app/shared/components/top-form/top-form.html
@@ -1,5 +1,5 @@
 @if (this.vals$| async ) {} @if (this.input$| async ) {}
-<!-- <mat-dialog-content> -->
+
 <section class="top-form">
   <form
     [formGroup]="manualForm"
@@ -7,7 +7,7 @@
     (focusout)="submitToBuilder()"
   >
     <div class="new-word__wik-row">
-      <mat-form-field>
+      <mat-form-field hideRequiredMarker>
         <mat-label for="original">Original</mat-label>
 
         <input
@@ -15,27 +15,48 @@
           type="text"
           formControlName="original"
           matInput
+          required
         />
+        @if (original?.invalid && (original?.dirty)) {
+        <!-- @if (original?.invalid && (original?.dirty || original?.touched)) { -->
+        <div>
+          @if (original?.hasError('required')) {
+          <div class="error">Original is required.</div>
+          }
+        </div>
+        }
       </mat-form-field>
+
       <app-wiktion [downPut]="this.formValues$" />
     </div>
-    <mat-form-field>
+    <mat-form-field hideRequiredMarker>
       <mat-label for="translation">Translation</mat-label>
       <input
         autocomplete="off"
         type="text"
         formControlName="translation"
         matInput
+        required
       />
+
+      @if (translation?.invalid && (translation?.dirty || translation?.touched))
+      {
+      <div class="alert alert-danger">
+        @if (translation?.hasError('required')) {
+        <div class="error">Translation is required.</div>
+        }
+      </div>
+      }
     </mat-form-field>
     <div>
-      <mat-form-field>
+      <mat-form-field hideRequiredMarker>
         <mat-label for="partOfSpeech">Part of Speech</mat-label>
 
         <mat-select
           (selectionChange)="speechChanged()"
           name="partOfSpeech"
           formControlName="partOfSpeech"
+          required
         >
           <mat-option value="Verb">Verb</mat-option>
           <mat-option value="Adjective">Adjective</mat-option>
@@ -47,51 +68,3 @@
   </form>
   <app-search-ahead [downPut]="this.formValues$" />
 </section>
-<!-- </mat-dialog-content> -->
-
-<!-- <mat-dialog-content>
-  <section class="outer">
-    <form
-      [formGroup]="manualForm"
-      class="new-word-form"
-      (focusout)="submitToBuilder()"
-    >
-      <mat-form-field>
-        <mat-label for="original">Original</mat-label>
-        <input
-          autocomplete="off"
-          type="text"
-          formControlName="original"
-          matInput
-        />
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label for="translation">Translation</mat-label>
-        <input
-          autocomplete="off"
-          id="translation"
-          type="text"
-          formControlName="translation"
-          matInput
-        />
-      </mat-form-field>
-      <div class="speech-row">
-        <mat-form-field class="speech-row__field">
-          <mat-label for="partOfSpeech">Part of Speech</mat-label>
-
-          <mat-select
-            (selectionChange)="speechChanged()"
-            name="partOfSpeech"
-            id="partOfSpeech"
-            formControlName="partOfSpeech"
-          >
-            <mat-option value="Verb">Verb</mat-option>
-            <mat-option value="Adjective">Adjective</mat-option>
-            <mat-option value="Noun">Noun</mat-option>
-            <mat-option value="Other">Other</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </form>
-  </section>
-</mat-dialog-content> -->
