--- a/src/app/shared/components/wiktion/wiktion.html
+++ b/src/app/shared/components/wiktion/wiktion.html
@@ -1,15 +1,3 @@
-<!-- <section class="wiktion-div">
-  <form [formGroup]="scrapeForm" (ngSubmit)="submitScrapeWord()">
-    <mat-form-field appearance="outline">
-      <mat-label
-        >Supply translation<button type="submit" matButton>+</button></mat-label
-      >
-
-      <input type="text" formControlName="scrape" matInput />
-    </mat-form-field>
-  </form>
-</section> -->
-<!-- <button (click)="submitScrapeWord()">+</button> -->
 <button class="cloud" mat-icon-button matSuffix (click)="submitScrapeWord()">
-  <mat-icon>cloud_queue</mat-icon>
+  <mat-icon>search</mat-icon>
 </button>
