--- a/src/app/modules/offset-quiz-fifty/offset-quiz-fifty.html
+++ b/src/app/modules/offset-quiz-fifty/offset-quiz-fifty.html
@@ -17,7 +17,8 @@
 
   <section class="btn-panel">
     <!-- <section class="btn-panel__sub-panel"> -->
-    <p (click)="this.offset.pageChange(-1)">
+    <!-- <p (click)="this.offset.pageChange(-1)"> -->
+    <p (click)="this.offset.pageChange(-1, this.langToken)">
       <i class="btn-panel__big-arrow left"></i>
     </p>
     <p (click)="this.offset.returnCount(-1)">
@@ -35,7 +36,8 @@
     <p (click)="this.offset.returnCount(1)">
       <i class="btn-panel__small-arrow right"></i>
     </p>
-    <p (click)="this.offset.pageChange(1)">
+    <!-- <p (click)="this.offset.pageChange(1)"> -->
+    <p (click)="this.offset.pageChange(1, this.langToken)">
       <i class="btn-panel__big-arrow right"></i>
     </p>
   </section>
