--- a/src/app/modules/offset-quiz-fifty/offset-quiz-fifty.scss
+++ b/src/app/modules/offset-quiz-fifty/offset-quiz-fifty.scss
@@ -7,8 +7,9 @@
   &__page-count {
     color: #a0a0a0;
     font-size: x-small;
-    padding-left: 1rem;
-    transform: translateY(-0.9rem);
+    align-self: flex-end;
+    transform: translate(-1.3rem, 1rem);
+    // padding-left: 1rem;
   }
 
   .word-panel {
